tests/neg/i4373b.scala
// ==> 05bef7805687ba94da37177f7568e3ba7da1f91c.scala <==
class x0 {
  x1:
      x0 | _  // error
// error